--- a/notes/dockerfile.notes.maven
+++ b/notes/dockerfile.notes.maven
@@ -10,7 +10,7 @@ RUN apt-get update -y; apt-get install curl -y
 WORKDIR /home/apm-tutorial-java
 
 #Uncomment to add the datadog tracing library
-#RUN curl -Lo dd-java-agent.jar https://dtdg.co/latest-java-tracer 
+RUN curl -Lo dd-java-agent.jar https://dtdg.co/latest-java-tracer 
 
 COPY notes notes/  
 WORKDIR /home/apm-tutorial-java/notes
@@ -20,7 +20,7 @@ RUN ./mvnw clean
 RUN ./mvnw package
 
 #Uncomment to run without tracing
-ENTRYPOINT ["java", "-jar", "target/notes-0.0.1-SNAPSHOT.jar"]
+#ENTRYPOINT ["java", "-jar", "target/notes-0.0.1-SNAPSHOT.jar"]
 
 #Uncomment to run with tracing
-#ENTRYPOINT ["java" , "-javaagent:../dd-java-agent.jar", "-Ddd.trace.sample.rate=1", "-jar" , "target/notes-0.0.1-SNAPSHOT.jar"]  
+ENTRYPOINT ["java" , "-javaagent:../dd-java-agent.jar", "-Ddd.trace.sample.rate=1", "-jar" , "target/notes-0.0.1-SNAPSHOT.jar"]  
